--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="images/photo_cv.jpg" alt="Dev" class="img-circle">
         </div>
         <div class="heading">
-            <h1> Hello, c'est moi Dev</h1>
+            <h1> Hello, c'est moi<br><br><i> D<span style="text-transform: lowercase;">evillers</span></i> POATY-MEATY</h1>
             <h3> Consutlant Testeur</h3>
             <a href="docs/CV_Devillers_2020_Testeur_QA.pdf" class="button1"> Télécharger CV</a>
 
